--- a/index.html
+++ b/index.html
@@ -7,15 +7,15 @@
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   <link rel="stylesheet" href="style.css">
   <title>Frontend Mentor | [Challenge Name Here]</title>
-
 </head>
 <body>
 <div class="container">
 <h2>Our Pricing</h2>
 <div class="subscription">
   <p>Annually</p>
-  <div class="toggle-btn">
-    <div class="circle"></div>
+  <div class="toggle-switch">
+    <div class="circle">
+    </div>
   </div>
   <p>Monthly</p>
 </div>
@@ -49,5 +49,6 @@
   </div>
 </div>
 </div>
+<script src="./script.js"></script>
 </body>
 </html>
